--- a/neural/src/Pages/AboutUs/AboutUs.css
+++ b/neural/src/Pages/AboutUs/AboutUs.css
@@ -1,331 +1,289 @@
-.about_us_page{
-    scroll-snap-type: none;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-.about_us_container{
-  display: flex;
-  justify-content: center;
-  color:var(--our-service-heading-color);
-  background: var(--background-color);
-  height:650px;
-  margin-top:0px;
-  
-}
-.about_us_inner_container{
-   width:80%;
-   
-   margin-top: 6%;
-  
-  }
-  .about_us_inner_container_content{
-    width: 80%;
-    margin :auto;
-   
-    margin-top: 45px;
-  }
-  
-.about_us_our_team{
-    font-family: Lato;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 72px;
-    text-align: left;
-    color:var( --about-us-our-team-color);
-    
-    
-}
-.about_us_our_team_description{
-    font-family: Lato;
-    font-size: 35px;
-    font-weight: 400;
-    line-height: 52px;
-    text-align: left;
-    
-    color:var( --About-us-component-subheading);
-    
-
-
-    
-}
-.about_us_our_team_description_context{
-    font-family: Lato;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 23.64px;
-    text-align: left;
-    color:var( --About-us-component-subText);
-    margin-top: 20px;
-    height: 50px;
-}
-
-.owner{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    justify-content: space-between;
-    position: absolute;
-    flex-wrap: wrap;
-    
-    margin: auto;
-    margin-top: 60px;
-    width:80%;
-    padding: 0px 20px;
-  
-    
-    
-   
-}
-.owner_team{
-
+.about_container {
     display: flex;
-    flex-direction: column; /* Arrange items vertically */
-    align-items: center; /* Center items horizontally */
-    margin: 10px; /* Adjust margin between team members */
-    width: 250px;
-    height: 400px;
-    border-radius: 10px;
-
-   
- 
-}
-
-.owner_desgination{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    width:auto;
-   
-}
-.team_member{
-    font-family: Lato;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 47.28px;
-    text-align: left;
-    color:var( --introduction-heading-color);
-   
-    }
-.owner_paragraph{
-    font-size: 16px;
-    color:var( --case-study-content-color);
-   
-    
-}
-.owner-linkedin{
-    width: 20px!important;
-    height: 20px!important;
-    margin-top: 3px;
-    margin-left:10px;
-  
-}
-
-.employees {
-    display: flex;
-    flex-wrap: wrap; 
-    justify-content: space-around; 
-    align-items: center;
-    width: 80%;
-    margin: auto;
-    margin-top: 300px;
-   
-   
-
-}
-
-.employees_team {
-
-    display: flex;
-    flex-direction: column; /* Arrange items vertically */
-    align-items: center; /* Center items horizontally */
-    margin: 10px; /* Adjust margin between team members */
-    width: 250px;
-    height: 400px;
-    border-radius: 10px;
-    
-    
-
-}
-
-.team_member {
-    margin-top: 10px; /* Adjust space between image and text */
-    text-align: center; /* Center text */
-}
-
-.description_of_desgination {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    width:auto;
-    
-    
-}
-
-.owner_team img,
-.employees_team img {
+    height: 100vh;
     width: 100%;
-    height: 300px; /* Adjust the height as needed */
-    object-fit: cover; /* This property prevents stretching */
-    border-radius: 10px;
-}
-.designation_paragraph {
-    color: #1e3a5f;
-    
-    font-size: 16px
+    background: linear-gradient(90deg, #203B60 0%, #4C648B 100%);
+    display: flex;
 }
 
-.linkedin_image {
-    width: 20px; /* Set the width */
-    height: 20px; /* Set the height */
-    margin-top: 5px;
+.about1 {
+    width: 66.66vw;
 }
-.see-more-container {
+
+.heading {
+    font-size: 1.3vw;
+    line-height: 6.4vh;
+    color: #E0E0E0;
+    font-family: Lato;
+    font-family: 400;
+}
+
+.about-description {
+    font-size: 3.48vw;
+    line-height: 7.8vh;
+    color: #CEE7FE;
+    font-family: lato-regular;
+    font-family: 400;
+
+}
+
+.about-detail {
+    font-size: 1.16vw;
+    line-height: 3vh;
+    margin-top: 2.85vh;
+    font-family: lato-regular;
+    font-family: 400;
+    color: #ACC2EE;
+}
+
+
+.owner {
+    position: absolute;
+    top: 80%;
+    height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
-    margin-top: 20px;
-}
-.btn_see_more{
-    padding: 10px 30px;
-    color:var(--our-service-content-background-color);
-    font-weight: 600;
-    background:var(--background-color);
-    border-radius: 10px;
-    transition: border-radius .7s ease;
+    align-items: center;
+
 }
 
-@media screen and (max-width:1225px) and (min-width:1125px){
-    .employees{
-        margin-top: 600px;
-    
-    }
-    
+.owner-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 70%;
+    gap: 30px;
+    margin: auto;
 }
-@media screen and (max-width:1124px ) and (min-width:768px){
-    .about_us_container{
-        height: 600px;
-       
+
+
+.owner-card {
+    width: 15vw;
+    height: 23.5vw;
+    border-radius: 10px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.owner-img {
+    height: 17vw;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.teammember {
+    text-align: center;
+    padding: 0.3em;
+    font-size: 1.2vw;
+    color: #4D658D;
+}
+
+.owner-details {
+    display: flex;
+    white-space: nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 0.75vw;
+}
+
+.linkedin-img {
+    width: 1.4vw;
+    height: 3vh;
+}
+
+.about2 {
+    margin-top: 85vh;
+    padding: 1.4vw 0px;
+}
+
+.employee {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 80%;
+    margin: auto;
+    justify-content: space-between;
+    gap: 30px 0px;
+    height: auto;
+}
+
+.designation {
+    color: rgba(30, 58, 95, 1);
+    letter-spacing: 0.1px;
+
+}
+
+@media screen and (max-width:1535px) and (min-width:1280px) {
+    .owner {
+        top: 70%
     }
-    .about_us_our_team{
-        font-size: 24px;
+
+    .designation {
+        font-size: 1vw;
     }
-    .about_us_inner_container{
-        width:80%;
-        height: 400px;
-        
-         
-     }
-     .about_us_inner_container_content{
-        width: 80%;
-        margin-top:0px;
-     }
-    .about_us_our_team_description{
-        font-family: Lato;
-        font-size: 18px;
-        font-weight: 400;
-        line-height: 25px;
-        text-align: left;
-        margin-top: 0px;
-        color:var(--About-us-component-subheading);
+
+    .linkedin-img {
+        width: 1vw;
+        height: 1vw;
     }
-    .about_us_our_team_description_context{
-        font-size: 14px;
+
+    .about2 {
+        margin-top: calc(65vw - 25vw);
+        padding: 1.4vw 0px;
     }
-    .owner{
+}
+@media screen and (max-width :1279px) and (min-width:1024px) {
+    .owner-card{
+        width: 25vw;
+        height: 34vw;
+   
+    }
+    .owner-container{
         display: grid;
         grid-template-columns: repeat(2,1fr);
-        
-        
-        
-        width:75%
-        
     }
-    .employees-container{
-        margin-top: 600px;
+    .owner-img{
+        height: 27vw;
     }
-    .employees{
-        margin-top: 500px;
-       
+    .linkedin-img {
+        width: 1vw;
+        height: 1vw;
     }
-    .owner_team{
-      margin: auto;
-
+    .employee{
+        grid-template-columns: repeat(2,1fr);
+    } 
+    .designation {
+        font-size: 0.7vw;
+    }
+    .about2{
+        margin-top: 140vh;
     }
 }
-/* done */
-@media screen and (max-width:768px ) {
-    .about_us_page{
-        padding: 0px!important;
-        padding:80px 0px;
-        height: auto;
-      
+
+@media screen and (max-width :1023px ) and (min-width:768px){
+    .owner-card{
+        width: 25vw;
+        height: 34vw;
+   
     }
-    .about_us_our_team{
-        font-size: 20px;
-        margin-top: 28px;
+    .owner-container{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
     }
-    .about_us_container{
-        margin-top:-20px;
+    .owner-img{
+        height: 27vw;
+    }
+    .linkedin-img {
+        width: 1vw;
+        height: 1vw;
+    }
+    .employee{
+        grid-template-columns: repeat(2,1fr);
+    } 
+    .designation {
+        font-size: 0.7vw;
+    }
+    .about2{
+        margin-top:90vw;
+    }
+}
+@media screen and (max-width:767px) and (min-width:640px){
+    .owner-card{
+        width: 25vw;
+        height: 34vw;
+   
+    }
+    .owner-container{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+    }
+    .owner-img{
+        height: 27vw;
+    }
+    .linkedin-img {
+        width: 1.5vw;
+        height: 1.5vw;
+    }
+    .employee{
+        grid-template-columns: repeat(2,1fr);
+    } 
+    .designation {
+        font-size:1.5vw;
+    }
+    .about2{
+        margin-top:90vw;
+    }
+}
+
+@media screen and (max-width:639px) and (min-width:320px){
+    .about_container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 75vh;
+        width: 100%;
+        background: linear-gradient(90deg, #203B60 0%, #4C648B 100%);
+        display: flex;
+    }
+    .about1{
+        width: 80vw;
     
     }
-    .about_us_inner_container{
-        width:90%;
-     }
- 
-     .about_us_inner_container_content{
-        width: 100%;
-        padding: 80px 0px!important;
-        margin-top: 0px;
-        
-     }
-    .about_us_our_team_description{
-        font-family: Lato;
-        font-size:32px;
-        font-weight: 400;
-        line-height: 38.4px;
-        text-align: left;
-      
-        color:#CEE7FE
+    .heading{
+        font-size: 3vw;
+        line-height: 3vh;
     }
-    .about_us_our_team_description_context{
-        font-size: 16px;
-        line-height: 18.91px;
+    .about-description{
+        font-size: 5.5vw;
+        line-height: 3.5vh;
     }
-    .owner{
+    .about-detail{
+        font-size: 3vw;
+        line-height: 2.2vh;
+        margin-top: 2vh;
+    }
+    .owner {
+        top: 60%;
+    }
+    .owner-card{
+        width: 60vw;
+        height:60vw;
+   
+    }
+    .owner-container{
         display: grid;
         grid-template-columns: repeat(1,1fr);
-        
-     
-        position: absolute;
-        width:90%;
-        margin-left: -10px;
-        
-        margin-top: -40px;
-        
-        
+        gap: 15vw;
     }
-    .owner_team{
-    
-        width: 100%;
-        height: auto
-    }
-    .owner_team img{
-        max-width: 100%;
-        height: auto;
-    }
-    .employees-container{
-        margin-top: 1500px;
-        border: 1px solid transparent;
-     
-    }
-    
-    .employees_team{
-        width:90%;
-        margin: auto;
+    .owner-img{
         
-        border: 400px;
-       
+        height: 100%;
     }
-    
-  
+    .linkedin-img {
+        width: 3vw;
+        height: 3vw;
+    }
+    .employee{
+        grid-template-columns: repeat(1,1fr);
+        gap:15vw
+    } 
+    .teammember {
+        font-size: 3.5vw;
+    }
+    .designation {
+        font-size:3vw;
+    }
+    .about2{
+        margin-top:355vw;
+    }
+    .footer_container{
+        margin-top: 15vw;
+    }
 }
