--- a/neural/src/index.css
+++ b/neural/src/index.css
@@ -23,7 +23,11 @@
   --about-us-our-team-color:rgb(224,224,224);
 
 }
-
+.lato-regular {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 
 
 
